--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,11 +7,18 @@
     --color-main:rgb(255, 209, 2);
     --color-secondary: rgb(255, 242, 64);
     --color-dark: rgb(121, 90, 13);
+    --color-dark1: rgb(151, 112, 13);
     --color-bright: rgb(247, 247, 247);
+    --color-bright1: rgb(214, 214, 214);
+    --color-bright2: rgb(189, 189, 189);
+    --color-bright3: rgb(163, 163, 163);
     --color-text: rgb(223, 223, 223);
     --color-bg: #2b2b2b;
     --color-bg1: #3a3a3a;
     --color-bg2: #505050;
+    --color-bg3: rgb(92, 92, 92);
+    --color-bg4: rgb(88, 88, 88);
+    --color-bg5: rgb(99, 99, 99);
     --color-alert: #d62727;
 }
 
@@ -191,4 +198,29 @@
 /*============== Util ===================*/
 .app-bg-dark{
     background: var(--color-bg2)
+}
+
+
+/*============= Custom Scrollbar ===========*/
+.custom-scrollbar{
+    &::-webkit-scrollbar {
+        width: 5px;
+    }
+
+    /* Track */
+    &::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 4px var(--color-bg5); 
+        border-radius: 10px;
+    }
+
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+        background: var(--color-bright3); 
+        border-radius: 10px;
+    }
+
+    /* Handle on hover */
+    &::-webkit-scrollbar-thumb:hover {
+        background: var(--color-bright2); 
+    }
 }
