Quick revision of the project
Made minor adjustments

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,12 +13,12 @@
     --color-bright2: rgb(189, 189, 189);
     --color-bright3: rgb(163, 163, 163);
     --color-text: rgb(223, 223, 223);
-    --color-bg: #2b2b2b;
-    --color-bg1: #3a3a3a;
-    --color-bg2: #505050;
-    --color-bg3: rgb(92, 92, 92);
-    --color-bg4: rgb(88, 88, 88);
-    --color-bg5: rgb(99, 99, 99);
+    --color-bg: #202020;
+    --color-bg1: #2c2c2c;
+    --color-bg2: #3f3f3f;
+    --color-bg3: rgb(77, 77, 77);
+    --color-bg4: rgb(78, 78, 78);
+    --color-bg5: rgb(82, 82, 82);
     --color-alert: #d62727;
 }
 
