--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,7 +1,8 @@
 <div class="main-page-title-section">
+    <!-- <img class="main-bg-img" src="https://www.brotherrice.org/wp-content/uploads/2020/04/IMG_2446.jpg"> -->
     <img class="main-bg-img" src="https://lh4.googleusercontent.com/Dwz5Nos8r8My2U06mmmsmUmBPU5Z62TFJWk4KHXV3mq1ItZN_HW0c5SKpn4hwXZF4d5RuIp1-BT82p8ENzW2KwHfgaj7PCvojhRjZWLtttB9yH_m2KlgJ9F4hOi3vCbDpdUASFHJ">
     <div class="main-page-menu">
-        <h1>
+        <h1 class="main-page-title">
             ¡Descubre quién es el mejor en este ranking institucional!
         </h1>
         <hr>
