--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -42,6 +42,10 @@ hr {
     margin-top: 10%;
 }
 
+.main-page-title{
+    background: rgba(0, 0, 0, 0.404);
+}
+
 /* buttons */
 .main-page-buttons {
     margin-top: 1.5rem;
