--- a/src/app/pages/player-details/player-details.component.html
+++ b/src/app/pages/player-details/player-details.component.html
@@ -1,1 +1,7 @@
-<p>player-details works!</p>
+<div class="page-content">
+    <h1>Titulo</h1>
+    <p>Hola mis queridos amigos</p>
+
+    <app-lol-player-stats
+        [stats]="stats"></app-lol-player-stats>
+</div>
