Actually made progress on the page

--- a/src/app/pages/player-details/player-details.component.html
+++ b/src/app/pages/player-details/player-details.component.html
@@ -1,7 +1,5 @@
 <div class="page-content">
-    <h1>Titulo</h1>
-    <p>Hola mis queridos amigos</p>
-
+    <h1>{{stats.player.summonerName}}</h1>
     <app-lol-player-stats
         [stats]="stats"></app-lol-player-stats>
 </div>
