--- a/src/app/widgets/stats-widgets/lol-player-stats/lol-player-stats.component.html
+++ b/src/app/widgets/stats-widgets/lol-player-stats/lol-player-stats.component.html
@@ -1,2 +1,41 @@
-<p>{{statsStr}}</p>
-<img src="{{stats.champions[0].picture}}">
+<div class="row m-0">
+    <div class="col-lg p-0 mr-1">
+        <div class="card content-card">
+            <div class="card-header">
+                <h3>Cifras netas</h3>
+            </div>
+            <div class="card-body">
+                <table class="custom-table">
+                    <tbody>
+                        <tr><td>Assists:</td><td>{{stats.assists}}</td></tr>
+                        <tr><td>Deaths:</td><td>{{stats.deaths}}</td></tr>
+                        <tr><td>Damage Dealt to Champs.:</td><td>{{stats.damageDealtToChampions}}</td></tr>
+                        <tr><td>Damage Dealt to Objs.:</td><td>{{stats.damageDealtToObjectives}}</td></tr>
+                        <tr><td>Damage Received:</td><td>{{stats.damageReceived}}</td></tr>
+                        <tr><td>Gold:</td><td>{{stats.gold}}</td></tr>
+                        <tr><td>Kills:</td><td>{{stats.kills}}</td></tr>
+                        <tr><td>Minions:</td><td>{{stats.minions}}</td></tr>
+                        <tr><td>Minutes played:</td><td>{{stats.minutesPlayed}}</td></tr>
+                        <tr><td>Vision:</td><td>{{stats.visionScore}}</td></tr>
+                        <tr><td>Crowd Control:</td><td>{{stats.crowdControlScore}}</td></tr>
+                        <tr><td>Wins:</td><td>{{stats.wins}}</td></tr>
+                        <tr><td>Losses:</td><td>{{stats.losses}}</td></tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg p-0 mr-1">
+        <div class="card content-card col-card">
+            <div class="card-header">
+                <h3>Campeones recientes</h3>
+            </div>
+            <div class="card-body">
+                <img *ngFor="let champ of stats.champions" 
+                    src="{{champ.picture}}"
+                    [ngbTooltip]="champ.name"
+                    [openDelay]="300">
+            </div>
+        </div>
+    </div>
+</div>
